SUBDIRS = src

EXTRA_DIST = \
src/xpm/ \
src/xpm/q.xpm \
src/xpm/q2.xpm \
src/xpm/green-plus.xpm \
src/xpm/red-minus.xpm \
src/xpm/group-red.xpm \
src/xpm/q1.xpm \
src/xpm/buddy-blue.xpm \
src/xpm/man-red.xpm \
src/xpm/stop.xpm \
src/xpm/error.xpm \
src/xpm/hr2.xpm \
src/xpm/group-blue.xpm \
src/xpm/pfilter.xpm \
src/xpm/buddy-green.xpm \
src/xpm/buddy-red.xpm \
src/xpm/man-black.xpm \
src/xpm/group-green.xpm \
src/xpm/pfilter-cfg.xpm \
src/xpm/sfilter-cfg.xpm \
src/xpm/sfilter.xpm \
src/xpm/hl.xpm \
src/xpm/sn.xpm \
src/xpm/update.xpm \
src/xpm/refresh.xpm \
src/xpm/refrsel.xpm \
src/xpm/hex.xpm \
src/xpm/server-up.xpm \
src/xpm/server-error.xpm \
src/xpm/server-na.xpm \
src/xpm/server-to.xpm \
src/xpm/q3.xpm \
src/xpm/connect.xpm \
src/xpm/observe.xpm \
src/xpm/record.xpm \
src/xpm/server-down.xpm \
src/xpm/kp.xpm \
src/xqf.h \
src/addserver.h \
src/config.h \
src/dialogs.h \
src/debug.h \
src/dns.h \
src/filter.h \
src/flt-player.h \
src/game.h \
src/history.h \
src/host.h \
src/launch.h \
src/menus.h \
src/pixmaps.h \
src/pref.h \
src/psearch.h \
src/quake2_pal.h \
src/quake_pal.h \
src/rc.h \
src/rcon.h \
src/server.h \
src/skin.h \
src/skin_pcx.h \
src/sort.h \
src/source.h \
src/srv-info.h \
src/srv-list.h \
src/srv-prop.h \
src/stat.h \
src/statistics.h \
src/utils.h \
src/xqf-ui.h \
src/xutils.h \
src/zipped.h \
src/gnuconfig.h \
